# sherlock-gpui

./: Cargo.toml  flake.nix  roadmap-tasks.md
src/: main.rs  prelude.rs  search_bar.rs  search_view.rs
src/launcher/: bookmark_launcher.rs  mod.rs  web_launcher.rs
src/launcher/children/: app_data.rs  calc_data.rs  mod.rs  weather_data.rs
src/loader/: application_loader.rs  asset_source.rs  flag_loader.rs  icon_loader.rs  launcher_loader.rs  mod.rs  utils.rs
src/ui/: main_window.rs  mod.rs
src/ui/main_window/: actions.rs  mod.rs  render.rs
src/ui/search_bar/: mod.rs
src/utils/: cache.rs  command_launch.rs  errors.rs  logging.rs  mod.rs  paths.rs  websearch.rs
src/utils/config/: config_impl.rs  defaults.rs  flags.rs  guard.rs  imp.rs  mod.rs
src/utils/intent/: mod.rs
