[package]
name = "sherlock-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-net = "2.0.0"
async-std = "1.13.2"
bincode = {version = "2.0.1", features = ["serde"]}
chrono = "0.4.43"
glob = "0.3.3"
# Use the git version to get the latest Linux/Wayland patches
gpui = { git = "https://github.com/zed-industries/zed", rev = "7c724c0f1049e610c541c2f4f6a8739f91865e02" }
libc = "0.2.180"
linicon = {version = "2.3.0", features = ["expand-paths"]}
once_cell = "1.21.3"
rayon = "1.11.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
simd-json = "0.17.0"
toml = "0.9.11"
unicode-segmentation = "1.12.0"
xdg = "3.0.0"

[features]
wayland = ["gpui/wayland"]
